plugins/binding/capi/include/TellusimCMath.h

TS_CAPI TSVector4f* TS_CCALL tsVector4f_abs(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_abs(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_neg(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_neg(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_mul1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_mul1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_div1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_div1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_add1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_add1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_sub1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_sub1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_mul(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_mul(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_div(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_div(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_add(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_add(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_sub(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_sub(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_min(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_min(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_max(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_max(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_clamp(TSVector4f *ret, const TSVector4f *v, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_clamp(TSVector4d *ret, const TSVector4d *v, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_saturate(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_saturate(TSVector4d *ret, const TSVector4d *v);
TS_CAPI float32_t TS_CCALL tsVector4f_dot(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_dot(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_dot33(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_dot33(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_dot43(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_dot43(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_dot34(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float64_t TS_CCALL tsVector4d_dot34(const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_cross(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_cross(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_length(const TSVector4f *v);
TS_CAPI float64_t TS_CCALL tsVector4d_length(const TSVector4d *v);
TS_CAPI float32_t TS_CCALL tsVector4f_length3(const TSVector4f *v);
TS_CAPI float64_t TS_CCALL tsVector4d_length3(const TSVector4d *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_normalize(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_normalize(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_normalize3(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_normalize3(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_lerp(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1, float32_t k);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_lerp(TSVector4d *ret, const TSVector4d *v0, const TSVector4d *v1, float64_t k);