plugins/binding/rust/source/TellusimRSMath.rs

	
	pub fn new_s(v: f32) -> Vector4f {
		Vector4f { x: v, y: v, z: v, w: v }
	}
	pub fn new_v2(v: &Vector2f, z: f32, w: f32) -> Vector4f {
		Vector4f { x: v.x, y: v.y, z: z, w: w }
	}
	pub fn new_v3(v: &Vector3f, w: f32) -> Vector4f {
		Vector4f { x: v.x, y: v.y, z: v.z, w: w }
	}
	pub fn new_v4i(v: &Vector4i) -> Vector4f {
		Vector4f { x: v.x as f32, y: v.y as f32, z: v.z as f32, w: v.w as f32 }
	}
	pub fn new_v4u(v: &Vector4u) -> Vector4f {
		Vector4f { x: v.x as f32, y: v.y as f32, z: v.z as f32, w: v.w as f32 }
	}
	pub fn new_v4d(v: &Vector4d) -> Vector4f {
		Vector4f { x: v.x as f32, y: v.y as f32, z: v.z as f32, w: v.w as f32 }
	}
	pub fn new(x: f32, y: f32, z: f32, w: f32) -> Vector4f {
		Vector4f { x: x, y: y, z: z, w: w }
	}
	pub fn new_a(v: &[f32]) -> Vector4f {
		Vector4f { x: v[0], y: v[1], z: v[2], w: v[3] }
	}
	
	pub fn abs(&self) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector4f, v1: &Vector4f) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector4f, v1: &Vector4f) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector4f, v1: &Vector4f) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_clamp(&mut ret, self, v0, v1); }
		ret
	}
	pub fn saturate(&self) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_saturate(&mut ret, self); }
		ret
	}
	
	pub fn dot(v0: &Vector4f, v1: &Vector4f) -> f32 {
		unsafe { tsVector4f_dot(v0, v1) }
	}
	pub fn dot33(v0: &Vector4f, v1: &Vector4f) -> f32 {
		unsafe { tsVector4f_dot33(v0, v1) }
	}
	pub fn dot43(v0: &Vector4f, v1: &Vector4f) -> f32 {
		unsafe { tsVector4f_dot43(v0, v1) }
	}
	pub fn dot34(v0: &Vector4f, v1: &Vector4f) -> f32 {
		unsafe { tsVector4f_dot34(v0, v1) }
	}
	pub fn cross(v0: &Vector4f, v1: &Vector4f) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_cross(&mut ret, v0, v1); }
		ret
	}
	
	pub fn length(&self) -> f32 {
		unsafe { tsVector4f_length(self) }
	}
	pub fn length3(&self) -> f32 {
		unsafe { tsVector4f_length3(self) }
	}
	pub fn normalize(&self) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_normalize(&mut ret, self); }
		ret
	}
	pub fn normalize3(&self) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_normalize3(&mut ret, self); }
		ret
	}
	
	pub fn lerp(v0: &Vector4f, v1: &Vector4f, k: f32) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsVector4f_lerp(&mut ret, v0, v1, k); }
		ret
	}
	
	pub fn zero() -> Vector4f {
		Vector4f { x: 0.0, y: 0.0, z: 0.0, w: 0.0 }
	}
	pub fn one() -> Vector4f {
		Vector4f { x: 1.0, y: 1.0, z: 1.0, w: 1.0 }
	}
}

/*
 */
impl fmt::Display for Vector4f {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2} {3})", self.x, self.y, self.z, self.w)
	}
}

/*
 */
declare_neg_op!(Vector4f, tsVector4f_neg);

/*
 */
declare_scalar_op!(Vector4f, f32, Mul, mul, tsVector4f_mul1);
declare_scalar_op!(Vector4f, f32, Div, div, tsVector4f_div1);
declare_scalar_op!(Vector4f, f32, Add, add, tsVector4f_add1);
declare_scalar_op!(Vector4f, f32, Sub, sub, tsVector4f_sub1);

/*
 */
declare_vector_op!(Vector4f, Mul, mul, tsVector4f_mul);
declare_vector_op!(Vector4f, Div, div, tsVector4f_div);
declare_vector_op!(Vector4f, Add, add, tsVector4f_add);
declare_vector_op!(Vector4f, Sub, sub, tsVector4f_sub);

/*
 */
extern "C" {
	fn tsVector4f_abs(ret: *mut Vector4f, v: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_neg(ret: *mut Vector4f, v: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_mul1(ret: *mut Vector4f, v0: *const Vector4f, v1: f32) -> *mut Vector4f;
	fn tsVector4f_div1(ret: *mut Vector4f, v0: *const Vector4f, v1: f32) -> *mut Vector4f;
	fn tsVector4f_add1(ret: *mut Vector4f, v0: *const Vector4f, v1: f32) -> *mut Vector4f;
	fn tsVector4f_sub1(ret: *mut Vector4f, v0: *const Vector4f, v1: f32) -> *mut Vector4f;
	fn tsVector4f_mul(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_div(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_add(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_sub(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_min(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_max(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_clamp(ret: *mut Vector4f, v: *const Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_saturate(ret: *mut Vector4f, v: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_dot(v0: *const Vector4f, v1: *const Vector4f) -> f32;
	fn tsVector4f_dot33(v0: *const Vector4f, v1: *const Vector4f) -> f32;
	fn tsVector4f_dot43(v0: *const Vector4f, v1: *const Vector4f) -> f32;
	fn tsVector4f_dot34(v0: *const Vector4f, v1: *const Vector4f) -> f32;
	fn tsVector4f_cross(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_length(v: *const Vector4f) -> f32;
	fn tsVector4f_length3(v: *const Vector4f) -> f32;
	fn tsVector4f_normalize(ret: *mut Vector4f, v: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_normalize3(ret: *mut Vector4f, v: *const Vector4f) -> *mut Vector4f;
	fn tsVector4f_lerp(ret: *mut Vector4f, v0: *const Vector4f, v1: *const Vector4f, k: f32) -> *mut Vector4f;
}

/*****************************************************************************\
 *
 * Vector4d
 *
\*****************************************************************************/

/*
 */
#[repr(C, align(16))]
#[derive(Copy, Clone, Default)]
pub struct Vector4d {
	pub x: f64,
	pub y: f64,
	pub z: f64,
	pub w: f64,
}

/*
 */
impl Vector4d {
	
	pub fn new_s(v: f64) -> Vector4d {
		Vector4d { x: v, y: v, z: v, w: v }
	}
	pub fn new_v2(v: &Vector2d, z: f64, w: f64) -> Vector4d {
		Vector4d { x: v.x, y: v.y, z: z, w: w }
	}
	pub fn new_v3(v: &Vector3d, w: f64) -> Vector4d {
		Vector4d { x: v.x, y: v.y, z: v.z, w: w }
	}
	pub fn new_v4i(v: &Vector4i) -> Vector4d {
		Vector4d { x: v.x as f64, y: v.y as f64, z: v.z as f64, w: v.w as f64 }
	}
	pub fn new_v4u(v: &Vector4u) -> Vector4d {
		Vector4d { x: v.x as f64, y: v.y as f64, z: v.z as f64, w: v.w as f64 }
	}
	pub fn new_v4f(v: &Vector4f) -> Vector4d {
		Vector4d { x: v.x as f64, y: v.y as f64, z: v.z as f64, w: v.w as f64 }
	}
	pub fn new(x: f64, y: f64, z: f64, w: f64) -> Vector4d {
		Vector4d { x: x, y: y, z: z, w: w }
	}
	pub fn new_a(v: &[f64]) -> Vector4d {
		Vector4d { x: v[0], y: v[1], z: v[2], w: v[3] }
	}
	
	pub fn abs(&self) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector4d, v1: &Vector4d) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector4d, v1: &Vector4d) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector4d, v1: &Vector4d) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_clamp(&mut ret, self, v0, v1); }
		ret
	}
	pub fn saturate(&self) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_saturate(&mut ret, self); }
		ret
	}
	
	pub fn dot(v0: &Vector4d, v1: &Vector4d) -> f64 {
		unsafe { tsVector4d_dot(v0, v1) }
	}
	pub fn dot33(v0: &Vector4d, v1: &Vector4d) -> f64 {
		unsafe { tsVector4d_dot33(v0, v1) }
	}
	pub fn dot43(v0: &Vector4d, v1: &Vector4d) -> f64 {
		unsafe { tsVector4d_dot43(v0, v1) }
	}
	pub fn dot34(v0: &Vector4d, v1: &Vector4d) -> f64 {
		unsafe { tsVector4d_dot34(v0, v1) }
	}
	pub fn cross(v0: &Vector4d, v1: &Vector4d) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_cross(&mut ret, v0, v1); }
		ret
	}
	
	pub fn length(&self) -> f64 {
		unsafe { tsVector4d_length(self) }
	}
	pub fn length3(&self) -> f64 {
		unsafe { tsVector4d_length3(self) }
	}
	pub fn normalize(&self) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_normalize(&mut ret, self); }
		ret
	}
	pub fn normalize3(&self) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_normalize3(&mut ret, self); }
		ret
	}
	
	pub fn lerp(v0: &Vector4d, v1: &Vector4d, k: f64) -> Vector4d {
		let mut ret = Vector4d::default();
		unsafe { tsVector4d_lerp(&mut ret, v0, v1, k); }
		ret
	}
	
	pub fn zero() -> Vector4d {
		Vector4d { x: 0.0, y: 0.0, z: 0.0, w: 0.0 }
	}
	pub fn one() -> Vector4d {
		Vector4d { x: 1.0, y: 1.0, z: 1.0, w: 1.0 }
	}
}

/*
 */
impl fmt::Display for Vector4d {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2} {3})", self.x, self.y, self.z, self.w)
	}
}

/*
 */
declare_neg_op!(Vector4d, tsVector4d_neg);

/*
 */
declare_scalar_op!(Vector4d, f64, Mul, mul, tsVector4d_mul1);
declare_scalar_op!(Vector4d, f64, Div, div, tsVector4d_div1);
declare_scalar_op!(Vector4d, f64, Add, add, tsVector4d_add1);
declare_scalar_op!(Vector4d, f64, Sub, sub, tsVector4d_sub1);

/*
 */
declare_vector_op!(Vector4d, Mul, mul, tsVector4d_mul);
declare_vector_op!(Vector4d, Div, div, tsVector4d_div);
declare_vector_op!(Vector4d, Add, add, tsVector4d_add);
declare_vector_op!(Vector4d, Sub, sub, tsVector4d_sub);

/*
 */
extern "C" {
	fn tsVector4d_abs(ret: *mut Vector4d, v: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_neg(ret: *mut Vector4d, v: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_mul1(ret: *mut Vector4d, v0: *const Vector4d, v1: f64) -> *mut Vector4d;
	fn tsVector4d_div1(ret: *mut Vector4d, v0: *const Vector4d, v1: f64) -> *mut Vector4d;
	fn tsVector4d_add1(ret: *mut Vector4d, v0: *const Vector4d, v1: f64) -> *mut Vector4d;
	fn tsVector4d_sub1(ret: *mut Vector4d, v0: *const Vector4d, v1: f64) -> *mut Vector4d;
	fn tsVector4d_mul(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_div(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_add(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_sub(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_min(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_max(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_clamp(ret: *mut Vector4d, v: *const Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_saturate(ret: *mut Vector4d, v: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_dot(v0: *const Vector4d, v1: *const Vector4d) -> f64;
	fn tsVector4d_dot33(v0: *const Vector4d, v1: *const Vector4d) -> f64;
	fn tsVector4d_dot43(v0: *const Vector4d, v1: *const Vector4d) -> f64;
	fn tsVector4d_dot34(v0: *const Vector4d, v1: *const Vector4d) -> f64;
	fn tsVector4d_cross(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_length(v: *const Vector4d) -> f64;
	fn tsVector4d_length3(v: *const Vector4d) -> f64;
	fn tsVector4d_normalize(ret: *mut Vector4d, v: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_normalize3(ret: *mut Vector4d, v: *const Vector4d) -> *mut Vector4d;
	fn tsVector4d_lerp(ret: *mut Vector4d, v0: *const Vector4d, v1: *const Vector4d, k: f64) -> *mut Vector4d;
}

/*****************************************************************************\
 *
 * Matrix3x2f
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Matrix3x2f {
	pub row_0: Vector3f,
	pub row_1: Vector3f,
}

/*
 */
impl Matrix3x2f {
